--- a/src/sass/components/_Searchbar.scss
+++ b/src/sass/components/_Searchbar.scss
@@ -9,6 +9,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	height: 72px;
 	min-height: 64px;
 	padding-right: 24px;
 	padding-left: 24px;
