--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -242,4 +242,5 @@ img {
 .modal {
   max-width: calc(100vw - 48px);
   max-height: calc(100vh - 24px);
+  background-color: #ffffff;
 }/*# sourceMappingURL=main.css.map */
