Improves finished task

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,3 +6,4 @@
 @import './components/ImageGalleryItem';
 @import './components/Button';
 @import './components/Modal';
+@import './components/Loader';
