--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -243,4 +243,16 @@ img {
   max-width: calc(100vw - 48px);
   max-height: calc(100vh - 24px);
   background-color: #ffffff;
+}
+
+.loader-wrapper {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  z-index: 5000;
+  padding: 30px;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 50%;
 }/*# sourceMappingURL=main.css.map */
